--- a/styles.css
+++ b/styles.css
@@ -33,11 +33,21 @@ body {
 .board {
     width: 100vw;
     height: 100vh;
-    display: none;
+    display: grid;
     justify-content: center;
     align-content: center;
     justify-items: center;
     align-items: center;
+}
+
+.board-page {
+  width: 100vw;
+  height: 100vh;
+  display: none;
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
+  align-items: center;
 }
 
 .cell {
